TeraClient/Assets/3rd/CURL/External.cs


        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CURL_curl_shim_cleanup_delegates")]
        internal static extern void curl_shim_cleanup_delegates(IntPtr pThis);
//         [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CURL_curl_shim_get_file_time")]
//         internal static extern void curl_shim_get_file_time(Int64 unixTime,     //time_t
//             ref int yy, ref int mm, ref int dd, ref int hh, ref int mn, ref int ss);
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CURL_curl_shim_free_slist")]
        internal static extern void curl_shim_free_slist(IntPtr p);
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CURL_curl_shim_alloc_fd_sets")]
        internal static extern IntPtr curl_shim_alloc_fd_sets();
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CURL_curl_shim_free_fd_sets")]
        internal static extern void curl_shim_free_fd_sets(IntPtr fdsets);
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CURL_curl_shim_multi_fdset")]
        internal static extern CURLMcode curl_shim_multi_fdset(IntPtr multi,
            IntPtr fdsets, ref int maxFD);
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CURL_curl_shim_select")]
        internal static extern int curl_shim_select(int maxFD, IntPtr fdsets,
            int timeoutMillis);
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CURL_curl_shim_multi_info_read")]
        internal static extern IntPtr curl_shim_multi_info_read(IntPtr multi,
            ref int nMsgs);
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CURL_curl_shim_multi_info_free")]
        internal static extern void curl_shim_multi_info_free(IntPtr multiInfo);
//         [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
//         internal static extern int curl_shim_formadd(IntPtr[] ppForms,
//             IntPtr[] pParams, int nParams);
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CURL_curl_shim_install_share_delegates")]
        internal static extern int CURL_curl_shim_install_share_delegates(IntPtr pShare,
            IntPtr pThis, IntPtr pLock,
            IntPtr pUnlock);

        internal static int curl_shim_install_share_delegates(IntPtr pShare,
            IntPtr pThis, CURLSH_LOCK_DELEGATE pLock,
            CURLSH_UNLOCK_DELEGATE pUnlock)
        {
            IntPtr fLock = Marshal.GetFunctionPointerForDelegate(pLock);
            IntPtr fUnlock = Marshal.GetFunctionPointerForDelegate(pUnlock);
            return CURL_curl_shim_install_share_delegates(pShare, pThis, fLock, fUnlock);
        }

        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CURL_curl_shim_cleanup_share_delegates")]
        internal static extern void curl_shim_cleanup_share_delegates(IntPtr pShare);
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CURL_curl_shim_get_version_int_value")]
        internal static extern int curl_shim_get_version_int_value(IntPtr p, int offset);
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CURL_curl_shim_get_version_char_ptr")]
        internal static extern IntPtr curl_shim_get_version_char_ptr(IntPtr p, int offset);
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CURL_curl_shim_get_number_of_protocols")]
        internal static extern int curl_shim_get_number_of_protocols(IntPtr p, int offset);
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CURL_curl_shim_get_protocol_string")]
        internal static extern IntPtr curl_shim_get_protocol_string(IntPtr p, int offset,
            int index);

         //utility
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CURL_GetUrlFileSize")]
        internal static extern long CURL_GetUrlFileSize([MarshalAs(UnmanagedType.LPStr)]String url, int timeout);
    }
}
